# wyaFile

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh
examples/: basic.csv  basic.txt
src/: CommandParser.cpp  Indexer.cpp  Indexer.h  main.cpp
src/cli/: CommandParser.cpp  CommandParser.h
src/common/: Types.h
src/core/: Indexer.cpp  Indexer.h
